--- a/public/css/intern.css
+++ b/public/css/intern.css
@@ -249,3 +249,11 @@
      transform: translateY(-50%) rotate(-135deg);
      border-color: #4caf50;
  }
+
+ .bg-card{
+        background-color: #2a2a2a !important;
+        border-radius: 8px;
+        padding: 1rem;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+        margin-bottom: 1rem;
+ }
